# react-native-nitro-buffer

./: AGENTS.md  CLAUDE.md  README.md  README_zh.md  jest.config.cjs  nitro.json  package.json  react-native-nitro-buffer.podspec
__mocks__/: react-native-nitro-modules.ts
__tests__/: buffer.test.ts  node-buffer-parity.test.ts  utils.test.ts
android/: CMakeLists.txt
cpp/: HybridNitroBuffer.cpp
example/: .gitignore  App.tsx  README.md  app.json  metro.config.js  package.json
example/.maestro/: smoke.yaml
example/__tests__/: App.test.tsx
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/NitroBufferExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/NitroBufferExample.xcodeproj/: project.pbxproj
example/ios/NitroBufferExample.xcworkspace/: contents.xcworkspacedata
example/ios/build-targeted/: info.plist
example/ios/build-targeted/ModuleCache.noindex/: Accessibility-3VERVYZOCGOFWC62FVC62U8W6.pcm  Accessibility-U52F1R9RPCEP9WM6NV41DBQD.pcm  CFNetwork-5FVIG6IM4M4LZA3OZSNUHX26Y.pcm  CFNetwork-7W8O8342MTBMFIN1BLQXHTF63.pcm  CoreData-1WNPBW4EC8J5XU601CVUHS86K.pcm  CoreData-6GWUOKJD4NDCPKX8Q1YARH55O.pcm  CoreFoundation-5RD94EV96QH9URSLZC4RQ2FDJ.pcm  CoreFoundation-7QAY4B0SUXULG5GJX1ZK4BG7K.pcm  CoreGraphics-49ZANC45VK5X3ID0E2ZWJTK0O.pcm  CoreGraphics-AZ9LQYO7T5MFLJU1NG33VER0H.pcm  CoreImage-1S5UZG9A8FN0LA465AW42VMJJ.pcm  CoreImage-7UC83NY1BLICX5J5A9SE7C7W2.pcm  CoreLocation-1QPP6CU6EPV64XZCK3RCPP1ZB.pcm  (+80 more)
example/src/: smokeCases.ts
src/: Buffer.ts
(+7114 files in other folders)
